# catchcam

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-release.yml  build.yml  update-cameras.yml
boards/include/boards/: custom_catchcam.h
docs/: index.html
scripts/cameras/: main.py
scripts/cameras/scdb/: SCDB_Speed_30.csv  SCDB_Speed_40.csv  SCDB_Speed_50.csv  SCDB_Speed_60.csv  SCDB_Speed_70.csv  SCDB_Speed_80.csv  SCDB_Speed_90.csv
scripts/convert_audio_samples/: README.md  convert.py
scripts/export_commits/: .gitignore  main.py
scripts/fetch_cameras/: fetch.py
src/: FreeRTOSConfig.h  main.c
src/audio/: audio.c  audio.h  i2s_lsbj.pio
src/audio/samples/: audio_acquired_sample_data.h  audio_beep_sample_data.h  audio_eighty_sample_data.h  audio_fifty_sample_data.h  audio_five_sample_data.h  audio_forty_sample_data.h  audio_gps_signal_sample_data.h  audio_lost_sample_data.h  audio_ninety_sample_data.h  audio_one_hundred_sample_data.h  audio_searching_for_a_gps_signal_sample_data.h  audio_seventy_sample_data.h  audio_sixty_sample_data.h  audio_startup_sample_data.h  audio_ten_sample_data.h  audio_thirty_sample_data.h  audio_twenty_sample_data.h  audio_unknown_sample_data.h  audio_warning_speed_camera_ahead_limit_sample_data.h
src/cams/: cams.c  cams.h
src/gnss/: gnss.c  gnss.h
src/gnss/minmea/: minmea.c  minmea.h
src/leds/: leds.c  leds.h
